--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,81 +7,93 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/txtTT"
+        android:id="@+id/txtTitolo1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="286dp"
-        android:layout_marginBottom="626dp"
-        android:text="Titolo"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="INSERISCI I DATI"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/txtTitolo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginBottom="568dp"
+        android:layout_width="138dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="68dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:text="titolo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:hint="TITOLO"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTT" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTitolo1" />
 
     <Button
         android:id="@+id/btnInserisci"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="247dp"
-        android:layout_marginBottom="484dp"
-        android:text="find"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        android:layout_marginTop="136dp"
+        android:text="INSERIRE"
+        app:layout_constraintEnd_toStartOf="@+id/btnAprire"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTitolo"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:text="artista"
-        tools:layout_editor_absoluteX="39dp"
-        tools:layout_editor_absoluteY="386dp" />
+        app:layout_constraintTop_toBottomOf="@+id/autore" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnAprire"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="add"
-        tools:layout_editor_absoluteX="76dp"
-        tools:layout_editor_absoluteY="477dp" />
+        android:layout_marginTop="136dp"
+        android:text="APRIRE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnInserisci"
+        app:layout_constraintTop_toBottomOf="@+id/autore" />
+
+    <EditText
+        android:id="@+id/durata"
+        android:layout_width="139dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="DURATA"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtTitolo" />
+
+    <EditText
+        android:id="@+id/autore"
+        android:layout_width="140dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="36dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="AUTORE"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/durata" />
 
     <Spinner
         android:id="@+id/spgeneri"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="74dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        android:layout_width="178dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnInserisci" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTitolo1" />
+
+    <EditText
+        android:id="@+id/data"
+        android:layout_width="177dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:inputType="date"
+        android:hint="DATA_USCITA"
+        app:layout_constraintStart_toEndOf="@+id/durata"
+        app:layout_constraintTop_toBottomOf="@+id/spgeneri" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
